# aura_bot

./: .flake8  .gitignore  docker-compose.yml  main.py  mypy.ini  pylintrc  pyproject.toml
src/: main.py
src/database/: database.py
src/json_files/: category.json  contacts.json  main.json  product.py  products.json
src/models/: category.py  product.py  users.py
src/models/shared/: base_model.py  fields.py
src/product_text/: product.txt
src/repositories/: CategoryRepository.py  ProductRepository.py  UserRepository.py
src/router/: callback_router.py  message_router.py
src/schemas/: schema_callback.py  user_telegram.py
src/service/bot/: BotBase.py  QueryWorker.py
src/service/buttons/: ButtonsService.py
src/service/manager/: BotManagerFacade.py
src/service/parser_json/: ParseJson.py
src/setting/: settings.py
